[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceline"
version = "0.1.0"
description = "Local-first CLI for turning logs from multiple sources into incident timelines."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "TraceLine contributors" },
]
keywords = ["cli", "logs", "incident-response", "timeline", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
traceline = "traceline.cli:app"
tl = "traceline.quick:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
